
The bootstrapping of <<retry-topic>> infrastructure beans has changed in this release to avoid some timing problems that occurred in some application regarding application initialization.

You can now set a different `concurrency` for the retry containers; by default, the concurrency is the same as the main container.

`@RetryableTopic` can now be used as a meta-annotation on custom annotations, including support for `@AliasFor` properties.

See <<retry-config>> for more information.

The default replication factor for the retry topics is now `-1` (use broker default).
If your broker is earlier that version 2.4, you will now need to explicitly set the property.

You can now configure multiple `@RetryableTopic` listeners on the same topic in the same application context.
Previously, this was not possible.
See <<multi-retry>> for more information.

There are breaking API changes in `RetryTopicConfigurationSupport`; specifically, if you override the bean definition methods for `destinationTopicResolver`, `kafkaConsumerBackoffManager` and/or `retryTopicConfigurer`;
these methods now require an `ObjectProvider<RetryTopicComponentFactory>` parameter.

[[x30-lc-changes]]
==== Listener Container Changes

Events related to consumer authentication and authorization failures are now published by the container.
See <<events>> for more information.

[[x30-template-changes]]
==== `KafkaTemplate` Changes

The futures returned by this class are now `CompletableFuture` s instead of `ListenableFuture` s.
See <<kafka-template>>.

[[x30-rkt-changes]]
==== `ReplyingKafkaTemplate` Changes

The futures returned by this class are now `CompletableFuture` s instead of `ListenableFuture` s.
See <<replying-template>> and <<exchanging-messages>>.

[[x30-listener]]
==== `@KafkaListener` Changes

You can now use a custom correlation header which will be echoed in any reply message.
See the note at the end of <<replying-template>> for more information.